Convert to latex point 7 #124

--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -285,23 +285,6 @@
 	pages = {773--780}
 }
 
-@inproceedings{ art:li_foreground_2003,
-	address = {New York, NY, USA},
-	series = {{MULTIMEDIA} '03},
-	title = {Foreground {Object} {Detection} from {Videos} {Containing} {Complex} {Background}},
-	isbn = {978-1-58113-722-4},
-	url = {http://doi.acm.org/10.1145/957013.957017},
-	doi = {10.1145/957013.957017},
-	abstract = {This paper proposes a novel method for detection and segmentation of foreground objects from a video which contains both stationary and moving background objects and undergoes both gradual and sudden "once-off" changes. A Bayes decision rule for classification of background and foreground from selected feature vectors is formulated. Under this rule, different types of background objects will be classified from foreground objects by choosing a proper feature vector. The stationary background object is described by the color feature, and the moving background object is represented by the color co-occurrence feature. Foreground objects are extracted by fusing the classification results from both stationary and moving pixels. Learning strategies for the gradual and sudden "once-off" background changes are proposed to adapt to various changes in background through the video. The convergence of the learning process is proved and a formula to select a proper learning rate is also derived. Experiments have shown promising results in extracting foreground objects from many complex backgrounds including wavering tree branches, flickering screens and water surfaces, moving escalators, opening and closing doors, switching lights and shadows of moving objects.},
-	urldate = {2016-10-12},
-	booktitle = {Proceedings of the {Eleventh} {ACM} {International} {Conference} on {Multimedia}},
-	publisher = {ACM},
-	author = {Li, Liyuan and Huang, Weimin and Gu, Irene Y. H. and Tian, Qi},
-	year = {2003},
-	keywords = {background modeling, Bayes model, color co-occurrence, foreground segmentation, video processing, video surveillance},
-	pages = {2--10}
-}
-
 @misc{ github:background_segm,
     author = "OpenCV",
     title = "Interfaz BackgroundSubtractorMOG2 (background\_segm.hpp)",
@@ -455,5 +438,21 @@
 	title = {Gitflow - A successful Git branching model},
     year = "2010",
 	url = {http://nvie.com/posts/a-successful-git-branching-model/},
+    note = "[Online; Accedido 26-Enero-2017]"
+}
+
+@misc{ android:versions,
+    author = "Google",
+	title = {Platform Versions - Google Developers},
+    year = "2017",
+	url = {https://developer.android.com/about/dashboards/},
+    note = "[Online; Accedido 28-Enero-2017]"
+}
+
+@misc{ wiki:pomodoro,
+    author = "Wikipedia",
+	title = {Pomodoro Technique --- Wikipedia{,} The Free Encyclopedia},
+    year = "2017",
+	url = {https://en.wikipedia.org/w/index.php?title=Pomodoro\_Technique&oldid=760673890},
     note = "[Online; Accedido 26-Enero-2017]"
 }
