--- a/docs/latex/tex/4_Tecnicas_y_herramientas.tex
+++ b/docs/latex/tex/4_Tecnicas_y_herramientas.tex
@@ -31,6 +31,17 @@ se crea una \emph{feature branch}. La preparación del siguiente
 lanzamiento se realiza en una \emph{release branch}. Si aparece un fallo
 en producción, este se soluciona en una \emph{hotfix branch} \citep{git:gitflow}.
 
+\subsection{Técnica Pomodoro}\label{pomodoro}
+
+La técnica Pomodoro es un método para incrementar la productividad aprovechando 
+mejor el tiempo. Para aplicarla, se divide la tarea a realizar en intervalos de
+25 minutos, llamados \emph{pomodoros}. Durante estos intervalos se debe evitar cualquier 
+distracción que nos desvíe de la tarea. Después de cada Pomodoro se descansa 5 
+minutos, menos en los múltiplos de cuatro que se realiza un descanso de 30 minutos
+\citep{wiki:pomodoro}.
+
+Se ha utilizado la aplicación \href{https://www.microsoft.com/es-es/store/p/focus-10/9nblggh5g2xh}{Focus 10} como temporizador.
+
 \section{Patrones de diseño}\label{patrones-de-diseno}
 
 \subsection{\emph{Model-View-Presenter} (MVP)}\label{model-view-presenter-mvp}
@@ -478,6 +489,7 @@ definen como la alternativa a SQLite y presumen de ser más rápidos que
 cualquier ORM e incluso que SQLite puro. Posee una API muy intuitiva que
 facilita en gran medida el acceso a datos.
 
+\newpage
 \section{Página web}\label{pagina-web}
 
 \subsection{GitHub Pages}\label{github-pages}
