--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -26,7 +26,7 @@
     journal = {Visual observation analysis of animal insect behavior ICPR},
     pages = {1--4},
     title = {{Video Monitoring of Honey Bee Colonies at the Hive Entrance}},
-    url = {http://homepages.inf.ed.ac.uk/rbf/VAIB08PAPERS/vaib9{\_}mummert.pdf},
+    url = {http://homepages.inf.ed.ac.uk/rbf/VAIB08PAPERS/vaib9\_mummert.pdf},
     volume = {8},
     year = {2008}
 }
@@ -59,7 +59,7 @@
     number = {4},
     pages = {384--395},
     title = {{Microprocessor-controlled monitoring of honeybee flight activity at the hive entrance}},
-    url = {http://cat.inist.fr/?aModele=afficheN{\&}cpsidt=4192550 https://hal.archives-ouvertes.fr/hal-00891170/document http://www.apidologie.org/10.1051/apido:19940405},
+    url = {https://hal.archives-ouvertes.fr/hal-00891170/document},
     volume = {25},
     year = {1994}
 }
@@ -75,7 +75,7 @@
     number = {12},
     pages = {2503--2510},
     title = {{Capacitance-based sensor for monitoring bees passing through a tunnel}},
-    url = {http://stacks.iop.org/0957-0233/16/i=12/a=015 https://docs.google.com/file/d/0Bz7WbjRT9mlmTW1ac3R0azEycDA/view},
+    url = {http://stacks.iop.org/0957-0233/16/i=12/a=015},
     volume = {16},
     year = {2005}
 }
@@ -100,6 +100,7 @@
     pages = {429--437},
     pmid = {21267650},
     title = {{Honeybee tracking with microchips: A new methodology to measure the effects of pesticides}},
+    url = {https://www.ncbi.nlm.nih.gov/pubmed/21267650},
     volume = {20},
     year = {2011}
 }
@@ -117,7 +118,7 @@
     pages = {702--711},
     publisher = {Springer Berlin Heidelberg},
     title = {{3D tracking of honeybees enhanced by environmental context}},
-    url = {http://link.springer.com/10.1007/978-3-642-41181-6{\_}71},
+    url = {http://link.springer.com/10.1007/978-3-642-41181-6\_71},
     volume = {8156 LNCS},
     year = {2013}
 }
@@ -131,7 +132,7 @@
     number = {1},
     pages = {59},
     title = {{Detecting and tracking honeybees in 3D at the beehive entrance using stereo vision}},
-    url = {http://jivp.eurasipjournals.com/content/2013/1/59 https://hal.inria.fr/hal-00923374/document},
+    url = {http://jivp.eurasipjournals.com/content/2013/1/59},
     volume = {2013},
     year = {2013}
 }
@@ -154,7 +155,7 @@
 
 @misc{ wiki:bs,
     author = "Wikipedia",
-    title = "Background subtraction --- Wikipedia{,} The Free Encyclopedia",
+    title = "Background subtraction --- {Wikipedia}{,} {The Free Encyclopedia}",
     year = "2016",
     url = {https://en.wikipedia.org/w/index.php?title=Background\_subtraction&oldid=741230478},
     note = "[Online; Accedido 23-Septiembre-2016]"
@@ -162,7 +163,7 @@
  
 @misc{ opencv:bs_tutorial,
     author = "OpenCV",
-    title = "OpenCV Background Subtraction tutorial",
+    title = "{OpenCV} Background Subtraction tutorial",
     year = "2016",
     url = {http://docs.opencv.org/master/db/d5c/tutorial\_py\_bg\_subtraction.html},
     note = "[Online; Accedido 26-Septiembre-2016]"
@@ -221,7 +222,7 @@
 
 @misc{ programarfacil:detmov,
     author = "Luis del Valle Hernández",
-    title = "Detección de movimiento con OpenCV y Python",
+    title = "Detección de movimiento con {OpenCV} y {Python}",
     year = "2016",
     url = {http://programarfacil.com/blog/vision-artificial/deteccion-de-movimiento-con-opencv-python/},
     note = "[Online; Accedido 5-Octubre-2016]"
@@ -229,7 +230,7 @@
 
 @misc{ coursera:gmm,
     author = "University of Pennsylvania",
-    title = "Robotics: Estimation and Learning: Gaussian Mixture Model (GMM)",
+    title = "Robotics: Estimation and Learning: {Gaussian Mixture Model} ({GMM})",
     year = "2016",
     url = {https://www.coursera.org/learn/robotics-learning/lecture/XG0WD/1-4-1-gaussian-mixture-model-gmm/},
     note = "[Online; Accedido 5-Octubre-2016]"
@@ -257,7 +258,7 @@
 	series = {{ICPR} '04},
 	title = {Improved {Adaptive} {Gaussian} {Mixture} {Model} for {Background} {Subtraction}},
 	isbn = {978-0-7695-2128-2},
-	url = {http://dx.doi.org/10.1109/ICPR.2004.479},
+	url = {https://pdfs.semanticscholar.org/56b1/eee82a51ce17d72a91b5876a3281418679cc.pdf},
 	doi = {10.1109/ICPR.2004.479},
 	abstract = {Background subtraction is a common computer vision task. We analyze the usual pixel-level approach. We develop an efficient adaptive algorithm using Gaussian mixture probability density. Recursive equations are used to constantly update the parameters and but also to simultaneously select the appropriate number of components for each pixel.},
 	urldate = {2016-10-12},
@@ -272,7 +273,7 @@
 	title = {Efficient {Adaptive} {Density} {Estimation} {Per} {Image} {Pixel} for the {Task} of {Background} {Subtraction}},
 	volume = {27},
 	issn = {0167-8655},
-	url = {http://dx.doi.org/10.1016/j.patrec.2005.11.005},
+	url = {http://www.zoranz.net/Publications/zivkovicPRL2006.pdf},
 	doi = {10.1016/j.patrec.2005.11.005},
 	abstract = {We analyze the computer vision task of pixel-level background subtraction. We present recursive equations that are used to constantly update the parameters of a Gaussian mixture model and to simultaneously select the appropriate number of components for each pixel. We also present a simple non-parametric adaptive density estimation method. The two methods are compared with each other and with some previously proposed algorithms.},
 	number = {7},
@@ -287,7 +288,7 @@
 
 @misc{ github:background_segm,
     author = "OpenCV",
-    title = "Interfaz BackgroundSubtractorMOG2 (background\_segm.hpp)",
+    title = "Interfaz {BackgroundSubtractorMOG2} (background\_segm.hpp)",
     year = "2016",
     url = {https://github.com/opencv/opencv/blob/master/modules/video/include/opencv2/video/background\_segm.hpp},
     note = "[Online; Accedido 12-Octubre-2016]"
@@ -295,7 +296,7 @@
 
 @misc{ github:bgfg_gaussmix2,
     author = "OpenCV",
-    title = "Implementación BackgroundSubtractorMOG2 (bgfg\_gaussmix2.cpp)",
+    title = "Implementación {BackgroundSubtractorMOG2} (bgfg\_gaussmix2.cpp)",
     year = "2016",
     url = {https://github.com/opencv/opencv/blob/master/modules/video/src/bgfg\_gaussmix2.cpp},
     note = "[Online; Accedido 12-Octubre-2016]"
@@ -303,7 +304,7 @@
 
 @misc{ opencv:mog2,
     author = "OpenCV",
-    title = "cv::BackgroundSubtractorMOG2 Class Reference",
+    title = "{cv::BackgroundSubtractorMOG2} Class Reference",
     year = "2016",
     url = {http://docs.opencv.org/3.1.0/d7/d7b/classcv\_1\_1BackgroundSubtractorMOG2.html},
     note = "[Online; Accedido 12-Octubre-2016]"
@@ -311,7 +312,7 @@
 
 @misc{ wiki:grayscale,
     author = "Wikipedia",
-    title = "Grayscale --- Wikipedia{,} The Free Encyclopedia",
+    title = "Grayscale --- {Wikipedia}{,} {The Free Encyclopedia}",
     year = "2016",
     url = {https://en.wikipedia.org/w/index.php?title=Grayscale&oldid=742147487},
     note = "[Online; Accedido 18-Octubre-2016]"
@@ -327,7 +328,7 @@
 
 @misc{ wiki:gaussian,
     author = "Wikipedia",
-    title = "Gaussian blur --- Wikipedia{,} The Free Encyclopedia",
+    title = "Gaussian blur --- {Wikipedia}{,} {The Free Encyclopedia}",
     year = "2016",
     url = {https://en.wikipedia.org/w/index.php?title=Gaussian\_blur&oldid=739396767},
     note = "[Online; Accedido 18-Octubre-2016]"
@@ -364,7 +365,7 @@
 
 @misc{ opencv:contours,
     author = "OpenCV",
-    title = "Contours in OpenCV",
+    title = "Contours in {OpenCV}",
     year = "2016",
     url = {http://docs.opencv.org/3.0-beta/doc/py\_tutorials/py\_imgproc/py\_contours/py\_table\_of\_contents\_contours/py\_table\_of\_contents\_contours.html},
     note = "[Online; Accedido 19-Octubre-2016]"
@@ -372,7 +373,7 @@
 
 @misc{ gobees:web,
     author = "David Miguel Lozano",
-    title = "Sitio web de GoBees",
+    title = "Sitio web de {GoBees}",
     year = "2016",
     url = {http://gobees.io/},
     note = "[Online; Accedido 25-Enero-2017]"
@@ -380,7 +381,7 @@
 
 @misc{ gobees:repo,
     author = "David Miguel Lozano",
-    title = "Repositorio de GoBees en GitHub",
+    title = "Repositorio de {GoBees} en {GitHub}",
     year = "2016",
     url = {https://github.com/davidmigloz/go-bees/},
     note = "[Online; Accedido 25-Enero-2017]"
@@ -388,7 +389,7 @@
 
 @misc{ gobees:play,
     author = "David Miguel Lozano",
-    title = "GoBees en Google Play",
+    title = "GoBees en {Google} {Play}",
     year = "2016",
     url = {https://play.google.com/store/apps/details?id=com.davidmiguel.gobees},
     note = "[Online; Accedido 25-Enero-2017]"
@@ -396,7 +397,7 @@
 
 @misc{ gobees:prototipes,
     author = "David Miguel Lozano",
-    title = "Repositorio de las herramientas desarrolladas para GoBees en GitHub",
+    title = "Repositorio de las herramientas desarrolladas para {GoBees} en {GitHub}",
     year = "2016",
     url = {https://github.com/davidmigloz/go-bees-prototypes},
     note = "[Online; Accedido 25-Enero-2017]"
@@ -404,7 +405,7 @@
 
 @misc{ pattern:mvp,
     author = "Martin Fowler",
-	title = {GUI Architectures - MVC and MVP},
+	title = {GUI Architectures - {MVC} and {MVP}},
     year = "2006",
 	url = {https://martinfowler.com/eaaDev/uiArchs.html},
 	note = "[Online; Accedido 22-Enero-2017]"
@@ -419,7 +420,7 @@
 
 @misc{ wiki:scrum,
     author = "Wikipedia",
-	title = {Scrum (software development) --- Wikipedia{,} The Free Encyclopedia},
+	title = {Scrum (software development) --- {Wikipedia}{,} {The Free Encyclopedia}},
     year = "2017",
 	url = {https://en.wikipedia.org/w/index.php?title=Scrum\_(software\_development)&oldid=761729658},
 	note = "[Online; Accedido 26-Enero-2017]"
@@ -427,7 +428,7 @@
 
 @misc{ wiki:tdd,
     author = "Wikipedia",
-	title = {Test-driven development --- Wikipedia{,} The Free Encyclopedia},
+	title = {Test-driven development --- {Wikipedia}{,} {The Free Encyclopedia}},
     year = "2017",
 	url = {https://en.wikipedia.org/w/index.php?title=Test-driven\_development&oldid=758403369},
     note = "[Online; Accedido 26-Enero-2017]"
@@ -435,7 +436,7 @@
 
 @misc{ git:gitflow,
     author = "Vincent Driessen",
-	title = {Gitflow - A successful Git branching model},
+	title = {Gitflow - A successful {Git} branching model},
     year = "2010",
 	url = {http://nvie.com/posts/a-successful-git-branching-model/},
     note = "[Online; Accedido 26-Enero-2017]"
@@ -443,7 +444,7 @@
 
 @misc{ android:versions,
     author = "Google",
-	title = {Platform Versions - Google Developers},
+	title = {Platform Versions - {Google Developers}},
     year = "2017",
 	url = {https://developer.android.com/about/dashboards/},
     note = "[Online; Accedido 28-Enero-2017]"
@@ -451,7 +452,7 @@
 
 @misc{ wiki:pomodoro,
     author = "Wikipedia",
-	title = {Pomodoro Technique --- Wikipedia{,} The Free Encyclopedia},
+	title = {Pomodoro Technique --- {Wikipedia}{,} {The Free Encyclopedia}},
     year = "2017",
 	url = {https://en.wikipedia.org/w/index.php?title=Pomodoro\_Technique&oldid=760673890},
     note = "[Online; Accedido 26-Enero-2017]"
