--- a/docs/latex/memoria.tex
+++ b/docs/latex/memoria.tex
@@ -415,7 +415,7 @@ En Burgos, {\large \today}
 \begin{flushleft} %\large
 Vº. Bº. del Tutor:\\[2cm]
 D. José Francisco Díez Pastor
-\end{flushleft}ajaja
+\end{flushleft}
 \end{minipage}
 \hfill
 \begin{minipage}{0.45\textwidth}
