--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -482,5 +482,9 @@
     <string name="sample_data_generated_msg">pasieka Próbka utworzona!</string>
     <string name="sample_hive_name">Ula #<xliff:g id="temp">%1$d</xliff:g></string>
     <string name="sample_hive_notes">Sprawdź, czy to ma Varroa.</string>
+    <string name="apiary_location__latitude_hint">\"Szerokość (np 42.352083)\"</string>
+    <string name="apiary_location__longitude_hint">\"Długość (np -3.697586)\"</string>
+    <string name="invalid_location_message">Nieprawidłowa lokalizacja!</string>
+    <string name="name_icon">Imię</string>
 
 </resources>
