--- a/docs/latex/anexos.tex
+++ b/docs/latex/anexos.tex
@@ -61,6 +61,15 @@
 	\FloatBarrier
 }
 
+\newcommand{\imagenAncho}[3]{
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=#3\textwidth]{#1}
+		\caption{#2}\label{fig:#1}
+	\end{figure}
+	\FloatBarrier
+}
+
 \newcommand{\imagenflotante}[2]{
 	\begin{figure}%[!h]
 		\centering
