--- a/docs/latex/bibliografiaAnexos.bib
+++ b/docs/latex/bibliografiaAnexos.bib
@@ -233,3 +233,11 @@
 	url = {https://github.com/davidmigloz/go-bees-prototypes/releases},
 	note = "[Online; Accedido 24-Enero-2017]"
 }
+
+@misc{ github:gobees_apk,
+    author = {David Miguel Lozano},
+	title = {Releases GoBees},
+    year = "2017",
+	url = {https://github.com/davidmigloz/go-bees/releases},
+	note = "[Online; Accedido 24-Enero-2017]"
+}
