Convert annex C to latex #151

--- a/docs/latex/anexos.tex
+++ b/docs/latex/anexos.tex
@@ -12,6 +12,9 @@
 \RequirePackage{xtab}
 \RequirePackage{multirow}
 
+% Landscape
+\usepackage{pdflscape}
+
 % Multi-page tables using
 \usepackage{longtable}
 \usepackage{tabularx}
