Convert annex B to latex #179

--- a/docs/latex/anexos.tex
+++ b/docs/latex/anexos.tex
@@ -7,7 +7,7 @@
 \usepackage{placeins}
 \usepackage{float}
 
-\RequirePackage{booktabs}
+\usepackage{longtable,booktabs}
 \RequirePackage[table]{xcolor}
 \RequirePackage{xtab}
 \RequirePackage{multirow}
