Convert annex A to latex #179

--- a/docs/latex/anexos.tex
+++ b/docs/latex/anexos.tex
@@ -6,6 +6,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{placeins}
 \usepackage{float}
+\usepackage{eurosym}
 
 \usepackage{longtable,booktabs}
 \RequirePackage[table]{xcolor}
